variables.Variables.scala.code
var nbPas:Int =0;
nbPas = nbPas +1;
while (estSurBiscuit()==false) {
  avance();
}
if (estSurBiscuit==true) {
  ramasseBiscuit();
  recule(nbPas:Int);
}